general/pulumi/ingress-nginx/canary/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: foo-canary
    name: foo-canary
spec:
    replicas: 1
    selector:
        matchLabels:
            app: foo-canary
    template:
        metadata:
            creationTimestamp: null
            labels:
                app: foo-canary
        spec:
            containers:
                - image: arm64v8/nginx
                  imagePullPolicy: Always
                  name: nginx
                  resources: {}
            restartPolicy: Always
