general/pulumi/ingress-nginx/canary/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: foo-canary
    name: foo-canary
spec:
    ports:
        - port: 80
          protocol: TCP
          targetPort: 80
    selector:
        app: foo-canary
    type: ClusterIP
